[tool.poetry]
name = "neko-demo-impl"
version = "0.1.0"
description = ""
authors = ["hhh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.neko.dependencies]
neko-demo-std = {path = "../neko-demo-std", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
